...
            "state": "translated",
            "value": "Dettagli"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Hecho"
          }
...
            "state": "translated",
            "value": "Nuova voce"
          }
        }
      }
    },
    "New task": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nueva tarea"
          }
...
